--- a/package.xml
+++ b/package.xml
@@ -50,9 +50,9 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>roslint</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
-  <test_depend>roslint</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
