--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,7 @@
   <build_depend>roslint</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>ros_bt_py_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
