add more service handlers and support for publishing tree & debug data

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -47,6 +47,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
      FILES
      DebugInfo.msg
+     DebugSettings.msg
      Node.msg
      NodeData.msg
      NodeDataLocation.msg
@@ -60,6 +61,7 @@ add_message_files(
 add_service_files(
   FILES
   AddNode.srv
+  ControlTreeExecution.srv
   GetAvailableNodes.srv
   GetAvailableSubtrees.srv
   InsertNode.srv
