--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ stages:
 
 sr-build-tools-build:
   stage: build
+  tags:
+    - docker
   script:
     - export toolset_branch="master"
     - export server_type="gitlab_ci"
