put install directive for tree_node.py in the correct CMakeLists.txt

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -166,15 +166,13 @@ include_directories(
 ## Install ##
 #############
 
+## Hopefully messages and services are installed automatically?
+
 # all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-install(PROGRAMS
-  scripts/tree_node.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-  )
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
