add built .deb files as artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ sr-build-tools-build:
     - export unit_tests_result_dir="unit_tests"
     - export coverage_tests_result_dir="code_coverage"
     - export lint_result_dir="lint_results"
+    - export deb_dir="debs"
     - export docker_image_name="shadowrobot/build-tools:trusty-indigo"
     - export remote_shell_script="https://raw.githubusercontent.com/T045T/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules $relative_job_path
@@ -21,3 +22,4 @@ sr-build-tools-build:
       - unit_tests/
       - code_coverage/
       - lint_results/
+      - debs/
