add messages and handlers for setting the execution mode and handling breakpoints

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -27,9 +27,11 @@ add_service_files(
   GetAvailableSubtrees.srv
   InsertNode.srv
   LoadTree.srv
+  ModifyBreakpoints.srv
   MoveNode.srv
   RemoveNode.srv
   ReplaceNode.srv
+  SetExecutionMode.srv
   WireNodeData.srv
   )
 
