add Continue service definition and handler in TreeManager

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -22,6 +22,7 @@ add_message_files(
 add_service_files(
   FILES
   AddNode.srv
+  Continue.srv
   ControlTreeExecution.srv
   GetAvailableNodes.srv
   GetAvailableSubtrees.srv
