--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -51,7 +51,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>ros_bt_py_msgs</exec_depend>
   <exec_depend>python-jsonpickle</exec_depend>
-
+  <exec_depend>roswww</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
