--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -38,11 +38,10 @@ add_service_files(
   )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  FILES
+  RunTree.action
+  )
 
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
