--- a/ros_bt_py_msgs/package.xml
+++ b/ros_bt_py_msgs/package.xml
@@ -17,10 +17,14 @@
   <url type="website">https://ids-git.fzi.de/berg/ros_bt_py</url>
 
   <build_depend>message_generation</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   <build_export_depend>message_generation</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
   <buildtool_depend>catkin</buildtool_depend>
 
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
