add and test AsyncServiceProxy

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -25,6 +25,7 @@ add_service_files(
   AddNode.srv
   Continue.srv
   ControlTreeExecution.srv
+  EvaluateUtility.srv
   GetAvailableNodes.srv
   GetAvailableSubtrees.srv
   InsertNode.srv
