--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -45,6 +45,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>rostest</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>roslint</build_depend>
   <build_export_depend>rospy</build_export_depend>
