--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -53,6 +53,10 @@
   <exec_depend>ros_bt_py_msgs</exec_depend>
   <exec_depend>python-jsonpickle</exec_depend>
   <exec_depend>roswww</exec_depend>
+
+  <test_depend>std_msgs</test_depend>
+  <test_depend>std_srvs</test_depend>
+  <test_depend>actionlib_tutorials</test_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
