first attempt + tests on Shovable decorator
Documentation to follow, but roughly:

The Shovable decorator marks the subtree rooted at its child as
executable on a remote agent, given that there's one available and its
utility value is higher.

--- a/ros_bt_py/CMakeLists.txt
+++ b/ros_bt_py/CMakeLists.txt
@@ -210,4 +210,5 @@ if (CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(test/rostest/async_service.test)
   add_rostest(test/rostest/ros_leaves.test)
+  add_rostest(test/rostest/shovable.test)
 endif()
