add helper service to get an empty instance from a jsonpickle'd type

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -30,6 +30,7 @@ add_service_files(
   EvaluateUtility.srv
   GetAvailableNodes.srv
   GetAvailableSubtrees.srv
+  GetJsonpickleInstance.srv
   InsertNode.srv
   LoadTree.srv
   ModifyBreakpoints.srv
