--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -51,8 +51,11 @@
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>ros_bt_py_msgs</exec_depend>
+  <exec_depend>tf</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>python-jsonpickle</exec_depend>
   <exec_depend>roswww</exec_depend>
+  <exec_depend>rosbridge_suite</exec_depend>
 
   <test_depend>std_msgs</test_depend>
   <test_depend>std_srvs</test_depend>
