add (and expose) GetSubtree service

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -32,6 +32,7 @@ add_service_files(
   GetAvailableNodes.srv
   GetAvailableSubtrees.srv
   GetJsonpickleInstance.srv
+  GetSubtree.srv
   GetTarget.srv
   InsertNode.srv
   LoadTree.srv
