retool Shovable and associated Service/Action
There's now an Action called FindBestExecutor, which is called from
the Shovable decorator.

The action server for that, in turn, will search the available ROS
namespaces for instances of EvaluateUtility, and compare the results.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -48,6 +48,7 @@ add_service_files(
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
+  FindBestExecutor.action
   RunTree.action
   )
 
