--- a/ros_bt_py/CMakeLists.txt
+++ b/ros_bt_py/CMakeLists.txt
@@ -93,4 +93,5 @@ if (CATKIN_ENABLE_TESTING)
   add_rostest(test/rostest/async_service.test)
   add_rostest(test/rostest/ros_leaves.test)
   add_rostest(test/rostest/shovable.test)
+  add_rostest(test/rostest/shove_tree.test)
 endif()
