report the state of a RemoteTreeSlot

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -15,6 +15,7 @@ add_message_files(
      NodeData.msg
      NodeDataLocation.msg
      NodeDataWiring.msg
+     RemoteSlotState.msg
      TickTime.msg
      Tree.msg
      TreeDataUpdate.msg
