move GetTarget to bt_sim_helpers

--- a/bt_sim_helpers/CMakeLists.txt
+++ b/bt_sim_helpers/CMakeLists.txt
@@ -36,8 +36,9 @@ add_message_files(
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
-  OpenDoor.srv
+  GetTarget.srv
   InteractObject.srv
+  OpenDoor.srv
 )
 
 ## Generate added messages and services with any dependencies listed here
