Introduced the concept of NodeOptionWirings and added a JSON editor for dictionaries in the editor. Closes #19
NodeOptionWirings allow the creator of a node to descibe relationships between option fields.

This has been implemented in the MessageFromConstDict node where the “dict” option and the “message_type” option now have a NodeOptionWiring. This allows the editor to update the dicts data based on the message type selected.

Additionally to ease the editing of dictionaries in the editor a jsoneditor was added that provides syntax highlighting and validation.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -15,6 +15,7 @@ add_message_files(
      NodeDataLocation.msg
      NodeData.msg
      NodeDataWiring.msg
+     NodeOptionWiring.msg
      Node.msg
      RemoteSlotState.msg
      Tree.msg
@@ -32,6 +33,7 @@ add_service_files(
   EvaluateUtility.srv
   GetAvailableNodes.srv
   GetAvailableSubtrees.srv
+  GetMessageFields.srv
   GetSubtree.srv
   InsertNode.srv
   LoadTree.srv
