added services to the list of messages provided in type fields

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -12,6 +12,7 @@ add_message_files(
      DebugInfo.msg
      DebugSettings.msg
      DocumentedNode.msg
+     Message.msg
      Messages.msg
      NodeDataLocation.msg
      NodeData.msg
