Add "AddNodeAtIndex" service that allows adding new nodes at a specific index of the given parent

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -29,6 +29,7 @@ add_message_files(
 add_service_files(
   FILES
   AddNode.srv
+  AddNodeAtIndex.srv
   ClearTree.srv
   Continue.srv
   ControlTreeExecution.srv
