--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -43,6 +43,7 @@ add_service_files(
   GetSubtree.srv
   InsertNode.srv
   LoadTree.srv
+  LoadTreeFromPath.srv
   ModifyBreakpoints.srv
   MorphNode.srv
   MoveNode.srv
