added tests for ros_param node

--- a/ros_bt_py/CMakeLists.txt
+++ b/ros_bt_py/CMakeLists.txt
@@ -98,5 +98,6 @@ if (CATKIN_ENABLE_TESTING)
   add_rostest(test/rostest/parallel_if_remote.test)
   add_rostest(test/rostest/ros_leaf_utility.test)
   add_rostest(test/rostest/ros_leaves.test)
+  add_rostest(test/rostest/ros_param.test)
   add_rostest(test/rostest/shovable.test)
 endif()
