--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,7 @@ variables:
     - rm -rf /usr/lib/python2.7/dist-packages/pyOpenSSL-*
     - pip install pyopenssl
     - pip install coverage gcovr
+    - pip install mock
     - apt-get install libxml2-utils tree
     - cd ${CATKIN_ROOT}
     - catkin_make
