Added rudimentary diagnostics functionality #62
It can be enabled via the debug/set_execution_mode service call (field "collect_node_diagnostics") and will then publish information about the currently executing node an the debug/node_diagnostics topic.

A simple command line frontend #63 that automatically starts and stops the collection of these diagnostics messages is available via:
roslaunch ros_bt_py diagnostics.launch

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -17,6 +17,7 @@ add_message_files(
      NodeDataLocation.msg
      NodeData.msg
      NodeDataWiring.msg
+     NodeDiagnostics.msg
      NodeOptionWiring.msg
      Node.msg
      Package.msg
