--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,6 +101,7 @@ variables:
     - pip install pyopenssl
     - pip install coverage gcovr
     - pip install mock
+    - pip install requests
     - apt-get install libxml2-utils tree
     - cd ${CATKIN_ROOT}
     - catkin_make
