enable ros header test

--- a/ros_bt_py/CMakeLists.txt
+++ b/ros_bt_py/CMakeLists.txt
@@ -96,6 +96,7 @@ if (CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(test/rostest/async_service.test)
   add_rostest(test/rostest/parallel_if_remote.test)
+  add_rostest(test/rostest/ros_header.test)
   add_rostest(test/rostest/ros_leaf_utility.test)
   add_rostest(test/rostest/ros_leaves.test)
   add_rostest(test/rostest/ros_param.test)
