--- a/ros_bt_py/etc/trees/examples/file_example.yaml
+++ b/ros_bt_py/etc/trees/examples/file_example.yaml
@@ -1,175 +1,209 @@
-public_node_data:
-  - data_kind: outputs
-    data_key: load_success
-    node_name: File
-  - data_kind: outputs
-    data_key: load_error_msg
-    node_name: File
 name: ''
-data_wirings:
-  - source:
-      data_kind: outputs
-      data_key: content
-      node_name: File
-    target:
-      data_kind: inputs
-      data_key: list
-      node_name: GetListItem
-  - source:
-      data_kind: outputs
-      data_key: constant
-      node_name: Constant
-    target:
-      data_kind: inputs
-      data_key: min
-      node_name: RandomIntInputs
-  - source:
-      data_kind: outputs
-      data_key: line_count
-      node_name: File
-    target:
-      data_kind: inputs
-      data_key: max
-      node_name: RandomIntInputs
-  - source:
-      data_kind: outputs
-      data_key: random_number
-      node_name: RandomIntInputs
-    target:
-      data_kind: inputs
-      data_key: index
-      node_name: GetListItem
-  - source:
-      data_kind: outputs
-      data_key: item
-      node_name: GetListItem
-    target:
-      data_kind: inputs
-      data_key: in
-      node_name: Log
-root_name: ''
-state: EDITABLE
 path: ''
-nodes:
-  - inputs: []
-    name: Constant
+root_name: "Sequence"
+nodes: 
+  - 
+    module: "ros_bt_py.nodes.constant"
+    node_class: "Constant"
+    version: "0.9.0"
     max_children: 0
-    outputs:
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.int"}'
-        key: constant
-    node_class: Constant
-    module: ros_bt_py.nodes.constant
-    state: UNINITIALIZED
+    name: "Constant"
     child_names: []
-    options:
-      - serialized_value: '0'
-        serialized_type: '{"py/type": "__builtin__.int"}'
-        key: constant_value
-      - serialized_value: '{"py/type": "__builtin__.int"}'
-        serialized_type: '{"py/type": "__builtin__.type"}'
-        key: constant_type
-    option_wirings:
-      - source: constant_type
-        target: constant_value
-  - inputs:
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.basestring"}'
-        key: in
-    name: Log
+    options: 
+      - 
+        key: "constant_value"
+        serialized_value: "0"
+        serialized_type: "{\"py/type\": \"__builtin__.int\"}"
+      - 
+        key: "constant_type"
+        serialized_value: "{\"py/type\": \"__builtin__.int\"}"
+        serialized_type: "{\"py/type\": \"__builtin__.type\"}"
+    inputs: []
+    outputs: 
+      - 
+        key: "constant"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.int\"}"
+    option_wirings: 
+      - 
+        source: "constant_type"
+        target: "constant_value"
+    state: "UNINITIALIZED"
+  - 
+    module: "ros_bt_py.nodes.log"
+    node_class: "Log"
+    version: "1.0.0"
     max_children: 0
+    name: "Log"
+    child_names: []
+    options: 
+      - 
+        key: "logger_level"
+        serialized_value: "{\"py/object\": \"ros_bt_py.ros_helpers.LoggerLevel\", \"logger_level\": \"warning\"\
+  }"
+        serialized_type: "{\"py/type\": \"ros_bt_py.ros_helpers.LoggerLevel\"}"
+    inputs: 
+      - 
+        key: "in"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.basestring\"}"
     outputs: []
-    node_class: Log
-    module: ros_bt_py.nodes.log
-    state: UNINITIALIZED
-    child_names: []
-    options:
-      - serialized_value: '"warn"'
-        serialized_type: '{"py/type": "__builtin__.basestring"}'
-        key: logger_level
     option_wirings: []
-  - inputs: []
-    name: Sequence
+    state: "UNINITIALIZED"
+  - 
+    module: "ros_bt_py.nodes.sequence"
+    node_class: "Sequence"
+    version: "0.9.0"
     max_children: -1
+    name: "Sequence"
+    child_names: [File, Constant, RandomIntInputs, GetListItem, Log]
+    options: []
+    inputs: []
     outputs: []
-    node_class: Sequence
-    module: ros_bt_py.nodes.sequence
-    state: UNINITIALIZED
-    child_names:
-      - File
-      - Constant
-      - RandomIntInputs
-      - GetListItem
-      - Log
-    options: []
     option_wirings: []
-  - inputs:
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.int"}'
-        key: max
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.int"}'
-        key: min
-    name: RandomIntInputs
+    state: "UNINITIALIZED"
+  - 
+    module: "ros_bt_py.nodes.random_number"
+    node_class: "RandomIntInputs"
+    version: "0.9.0"
     max_children: 0
-    outputs:
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.int"}'
-        key: random_number
-    node_class: RandomIntInputs
-    module: ros_bt_py.nodes.random_number
-    state: UNINITIALIZED
+    name: "RandomIntInputs"
     child_names: []
     options: []
+    inputs: 
+      - 
+        key: "max"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.int\"}"
+      - 
+        key: "min"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.int\"}"
+    outputs: 
+      - 
+        key: "random_number"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.int\"}"
     option_wirings: []
-  - inputs:
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.int"}'
-        key: index
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.list"}'
-        key: list
-    name: GetListItem
+    state: "UNINITIALIZED"
+  - 
+    module: "ros_bt_py.nodes.getters"
+    node_class: "GetListItem"
+    version: "0.9.0"
     max_children: 1
-    outputs:
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.basestring"}'
-        key: item
-    node_class: GetListItem
-    module: ros_bt_py.nodes.getters
-    state: UNINITIALIZED
+    name: "GetListItem"
     child_names: []
-    options:
-      - serialized_value: 'true'
-        serialized_type: '{"py/type": "__builtin__.bool"}'
-        key: succeed_on_stale_data
-      - serialized_value: '{"py/type": "__builtin__.str"}'
-        serialized_type: '{"py/type": "__builtin__.type"}'
-        key: list_type
+    options: 
+      - 
+        key: "succeed_on_stale_data"
+        serialized_value: "true"
+        serialized_type: "{\"py/type\": \"__builtin__.bool\"}"
+      - 
+        key: "list_type"
+        serialized_value: "{\"py/type\": \"__builtin__.str\"}"
+        serialized_type: "{\"py/type\": \"__builtin__.type\"}"
+    inputs: 
+      - 
+        key: "index"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.int\"}"
+      - 
+        key: "list"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.list\"}"
+    outputs: 
+      - 
+        key: "item"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.basestring\"}"
     option_wirings: []
-  - inputs: []
-    name: File
+    state: "UNINITIALIZED"
+  - 
+    module: "ros_bt_py.nodes.file"
+    node_class: "File"
+    version: "0.9.0"
     max_children: 0
-    outputs:
-      - serialized_value: 'true'
-        serialized_type: '{"py/type": "__builtin__.bool"}'
-        key: load_success
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.list"}'
-        key: content
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.int"}'
-        key: line_count
-      - serialized_value: 'null'
-        serialized_type: '{"py/type": "__builtin__.basestring"}'
-        key: load_error_msg
-    node_class: File
-    module: ros_bt_py.nodes.file
-    state: UNINITIALIZED
+    name: "File"
     child_names: []
-    options:
-      - serialized_value: '"package://ros_bt_py/etc/data/greetings.yaml"'
-        serialized_type: '{"py/type": "__builtin__.basestring"}'
-        key: file_path
+    options: 
+      - 
+        key: "file_path"
+        serialized_value: "\"package://ros_bt_py/etc/data/greetings.yaml\""
+        serialized_type: "{\"py/type\": \"__builtin__.basestring\"}"
+    inputs: []
+    outputs: 
+      - 
+        key: "load_success"
+        serialized_value: "true"
+        serialized_type: "{\"py/type\": \"__builtin__.bool\"}"
+      - 
+        key: "content"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.list\"}"
+      - 
+        key: "line_count"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.int\"}"
+      - 
+        key: "load_error_msg"
+        serialized_value: "null"
+        serialized_type: "{\"py/type\": \"__builtin__.basestring\"}"
     option_wirings: []
-tick_frequency_hz: 10
+    state: "UNINITIALIZED"
+data_wirings: 
+  - 
+    source: 
+      node_name: "File"
+      data_kind: "outputs"
+      data_key: "content"
+    target: 
+      node_name: "GetListItem"
+      data_kind: "inputs"
+      data_key: "list"
+  - 
+    source: 
+      node_name: "Constant"
+      data_kind: "outputs"
+      data_key: "constant"
+    target: 
+      node_name: "RandomIntInputs"
+      data_kind: "inputs"
+      data_key: "min"
+  - 
+    source: 
+      node_name: "File"
+      data_kind: "outputs"
+      data_key: "line_count"
+    target: 
+      node_name: "RandomIntInputs"
+      data_kind: "inputs"
+      data_key: "max"
+  - 
+    source: 
+      node_name: "RandomIntInputs"
+      data_kind: "outputs"
+      data_key: "random_number"
+    target: 
+      node_name: "GetListItem"
+      data_kind: "inputs"
+      data_key: "index"
+  - 
+    source: 
+      node_name: "GetListItem"
+      data_kind: "outputs"
+      data_key: "item"
+    target: 
+      node_name: "Log"
+      data_kind: "inputs"
+      data_key: "in"
+tick_frequency_hz: 10.0
+state: "EDITABLE"
+public_node_data: 
+  - 
+    node_name: "File"
+    data_kind: "outputs"
+    data_key: "load_success"
+  - 
+    node_name: "File"
+    data_kind: "outputs"
+    data_key: "load_error_msg"
