Mitigated an incompatibility with PyYAML 5 and genpy < 0.6.10. This fixes #43 and probably #85 as well

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -37,6 +37,7 @@ add_service_files(
   Continue.srv
   ControlTreeExecution.srv
   EvaluateUtility.srv
+  FixYaml.srv
   GenerateSubtree.srv
   GetAvailableNodes.srv
   GetAvailableSubtrees.srv
