--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -28,7 +28,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
 
-  <build_depend>rostest</build_depend>
   <build_depend>roslint</build_depend>
 
   <exec_depend>ros_bt_py_msgs</exec_depend>
@@ -39,6 +38,7 @@
   <exec_depend>rosbridge_suite</exec_depend>
   <exec_depend>catkin</exec_depend>
 
+  <test_depend>rostest</test_depend>
   <test_depend>std_msgs</test_depend>
   <test_depend>std_srvs</test_depend>
   <test_depend>actionlib_tutorials</test_depend>
