--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -43,6 +43,7 @@
   <test_depend>std_srvs</test_depend>
   <test_depend>actionlib_tutorials</test_depend>
   <test_depend>python-mock</test_depend>
+  <test_depend>python-requests</test_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
