--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,3 +2,7 @@ include:
   - project: 'continuous_integration/ci_scripts'
     ref: master
     file: '/gitlab-ci-yml/catkin_pipeline.yml'
+
+variables:
+  BUILD_MELODIC: "true"
+  BUILD_NOETIC: "true"
