disable noetic build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ variables:
   CATKIN_ROOT: ${HOME}/catkin_workspace
 
   BUILD_INDIGO: "false"
+  BUILD_NOETIC: "false"
 
 .clang-tidy-check:
   tags:
