--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -35,7 +35,9 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-jsonpickle</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-jsonpickle</exec_depend>
-  <exec_depend>roswww</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-requests</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</exec_depend>
+  <exec_depend>web_server</exec_depend>
   <exec_depend>rosbridge_suite</exec_depend>
   <exec_depend>catkin</exec_depend>
 
