--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -41,6 +41,8 @@
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-simplejson</exec_depend>
   <exec_depend>web_server</exec_depend>
   <exec_depend>rosbridge_suite</exec_depend>
+  <exec_depend>rosbridge_server</exec_depend>
+  <exec_depend>rqt_console</exec_depend>
   <exec_depend>catkin</exec_depend>
 
   <test_depend>rostest</test_depend>
