change tree name to filename on save and load

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -34,6 +34,7 @@ add_service_files(
   FILES
   AddNode.srv
   AddNodeAtIndex.srv
+  ChangeTreeName.srv
   ClearTree.srv
   Continue.srv
   ControlTreeExecution.srv
