added a rostest that tests the rosbridge websocket interface (that the web editor uses). This is pretty much only a skeleton to base a more comprehensive test upon

--- a/ros_bt_py/CMakeLists.txt
+++ b/ros_bt_py/CMakeLists.txt
@@ -107,4 +107,5 @@ if (CATKIN_ENABLE_TESTING)
   add_rostest(test/rostest/ros_param.test)
   add_rostest(test/rostest/shovable.test)
   add_rostest(test/rostest/shove_tree.test)
+  add_rostest(test/rostest/websocket_interface.test)
 endif()
