--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,24 @@ build_xenial:
 
 run_tests_bionic:
   needs: ["build_bionic"]
+  retry:
+    max: 1
+    when:
+      - script_failure
 
 run_tests_focal:
   needs: ["build_focal"]
+  retry:
+    max: 1
+    when:
+      - script_failure
 
 run_tests_xenial:
   needs: ["build_xenial"]
+  retry:
+    max: 1
+    when:
+      - script_failure
 
 variables:
   BUILD_NOETIC: "true"
