--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,10 @@ run_tests_bionic:
     max: 1
     when:
       - script_failure
+  artifacts:
+    when: always
+    reports:
+      junit: test_results/ros_bt_py/*.xml
 
 run_tests_focal:
   needs: ["build_focal"]
@@ -36,6 +40,10 @@ run_tests_xenial:
     max: 1
     when:
       - script_failure
+  artifacts:
+    when: always
+    reports:
+      junit: test_results/ros_bt_py/*.xml
 
 variables:
   BUILD_NOETIC: "true"
